--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -1,5 +1,6 @@
+/* PAGE */
 .table {
-  width: 90%;
+  max-width: 90%;
   margin: auto;
 }
 
@@ -44,6 +45,12 @@
 
 /* MAIN  */
 /* EMPLOYEES LIST TABLE */
+.table-main {
+  max-width: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
 .table-main--list {
   width: 100%;
   margin: 2rem auto;
@@ -51,52 +58,6 @@
   border-radius: 0.5rem;
   background-color: transparent;
   box-shadow: rgba(149, 157, 165, 0.3) 0px 0px 2.5rem 0.5px !important;
-}
-
-.table-main--list thead :nth-child(1) span {
-  display: none;
-}
-
-.table-main--list thead :nth-child(2) :first-child {
-  padding-right: 0;
-}
-
-.table-main--list thead :nth-child(2) > * {
-  padding-right: 0.75rem;
-  font-family: 'Open Sans Condensed';
-  color: var(--tertiary);
-}
-
-.table-main--sort {
-  position: relative;
-  display: inline-flex;
-  flex-direction: column;
-}
-
-.table-main--arrowUp {
-  position: absolute;
-  bottom: -1px;
-  background-color: transparent;
-  padding: 0 !important;
-  color: var(--tertiary);
-}
-
-.table-main--arrowDown {
-  position: absolute;
-  top: -8px;
-  background-color: transparent;
-  padding: 0 !important;
-  color: var(--tertiary);
-}
-
-.table-main--arrowUp:hover,
-.table-main--arrowUp:focus,
-.table-main--arrowDown:active,
-.table-main--arrowUp:hover,
-.table-main--arrowUp:focus,
-.table-main--arrowDown:active {
-  box-shadow: none !important;
-  color: var(--light) !important;
 }
 
 .table-main--list thead :first-child :first-child {
@@ -114,6 +75,52 @@
   color: var(--light);
 }
 
+.table-main--list thead :nth-child(2) > * {
+  padding-right: 0.75rem;
+  font-family: 'Open Sans Condensed';
+  color: var(--tertiary);
+}
+
+.table-main--list thead :nth-child(1) span {
+  display: none;
+}
+
+.table-main--list thead :nth-child(2) :first-child {
+  padding-right: 0;
+}
+
+.table-main--sort {
+  position: relative;
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.table-main--arrowUp,
+.table-main--arrowDown {
+  position: absolute;
+  background-color: transparent;
+  padding: 0 !important;
+  color: var(--tertiary);
+}
+
+.table-main--arrowUp {
+  bottom: -1px;
+}
+
+.table-main--arrowDown {
+  top: -8px;
+}
+
+.table-main--arrowUp:hover,
+.table-main--arrowUp:focus,
+.table-main--arrowDown:active,
+.table-main--arrowUp:hover,
+.table-main--arrowUp:focus,
+.table-main--arrowDown:active {
+  box-shadow: none !important;
+  color: var(--light) !important;
+}
+
 .table-main--list tbody {
   font-weight: 100;
 }
@@ -126,58 +133,7 @@
   border-bottom-right-radius: 0.5rem;
 }
 
-.table-main--list td {
-  padding: 0.25rem 0.5rem;
-}
-
-/* Id input */
-.table-main--list tbody tr :nth-child(1) {
-  width: 3%;
-  text-align: right;
-}
-
-/* First Name input */
-.table-main--list tbody tr :nth-child(2),
-/* Last Name input */
-.table-main--list tbody tr :nth-child(3) {
-  width: 10%;
-}
-
-/* Birth Date input */
-.table-main--list tbody tr :nth-child(4),
-/* Start Date input */
-.table-main--list tbody tr :nth-child(9) {
-  width: 10%;
-  text-align: center;
-}
-
-/* Street input */
-.table-main--list tbody tr :nth-child(5) {
-  width: 18%;
-}
-
-/* City input */
-.table-main--list tbody tr :nth-child(6) {
-  width: 13%;
-}
-
-/* State input */
-.table-main--list tbody tr :nth-child(7) {
-  width: 5%;
-  text-align: center;
-}
-
-/* Zip Code */
-.table-main--list tbody tr :nth-child(8) {
-  width: 7%;
-  text-align: center;
-}
-
-/* Department */
-.table-main--list tbody thr:nth-child(10) {
-  width: auto;
-}
-
+/* even = 1/2 row */
 .table-main--list tr:nth-child(even) {
   background-color: var(--disabled);
 }
@@ -185,6 +141,17 @@
 .table-main--list tr:hover,
 .table-main--list tr:focus {
   background-color: var(--tertiary);
+}
+
+/* THE SECRET SAUCE TO PREVENT DATA TABLE
+FROM OVERFLOWING THE PAGE WIDTH */
+.table-main--list td {
+  padding: 0.25rem 0.5rem;
+  width: 1%;
+}
+
+.table-main--list td.collapse {
+  width: 0.0000000001%;
 }
 
 /* FOOTER */
